Feature/feed endpoints (#4)
* tables creation and frontend city/district json resources added

* add: fe city and district json files added to the repo

* add: city and district models added

* add: feed endpoints added to the repository. Swagger updated. Cache mechanism added with unit tests

* go mod tidy

* cleanup logs

* index.html is excluded from compressing
