# docs/swagger.json
@@ -13,5 +13,71 @@
         "version": "1.0"
     },
     "host": "localhost:80",
-    "paths": {}
+    "paths": {
+        "/feeds": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Feed"
+                ],
+                "summary": "Get Feeds",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/feeds.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/feeds/mock": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Feed"
+                ],
+                "summary": "Get Feeds mock",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/feeds.Response"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "feeds.Feed": {
+            "type": "object",
+            "properties": {
+                "district_id": {
+                    "type": "integer"
+                },
+                "volunteer_data": {
+                    "type": "integer"
+                }
+            }
+        },
+        "feeds.Response": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/feeds.Feed"
+                    }
+                }
+            }
+        }
+    }
 }
